fix: html element spacing correction

--- a/packages/dnb-ui-lib/src/components/dropdown/style/themes/dnb-dropdown-theme-ui.scss
+++ b/packages/dnb-ui-lib/src/components/dropdown/style/themes/dnb-dropdown-theme-ui.scss
@@ -95,15 +95,12 @@
         }
       }
 
-      display: flex;
       &::after {
         content: '';
         position: absolute;
         z-index: 1;
+        top: calc(50% - 0.5rem);
         right: 1rem;
-
-        align-self: center;
-        justify-content: flex-end;
 
         width: 1rem;
         height: 1rem;
