--- a/packages/dnb-ui-lib/src/style/core/reset.scss
+++ b/packages/dnb-ui-lib/src/style/core/reset.scss
@@ -124,14 +124,6 @@
    */
 
   /**
-   * Remove the gray background on active links in IE 10.
-   */
-
-  a {
-    background-color: transparent;
-  }
-
-  /**
    * Add the correct text decoration in Edge, IE, Opera, and Safari.
    */
 
